# SpatialBench-UC

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: checker_v1.backup_20260104_170340.yaml  checker_v1.backup_20260116_113201.yaml  checker_v1.yaml  gen_sd15_boxdiff.yaml  gen_sd15_controlnet.yaml  gen_sd15_gligen.yaml  gen_sd15_promptonly.yaml  prompts_v1.yaml  report_v1.yaml
data/objects/: coco_classes.json  coco_subset_v1.json
data/prompts/v1.0.0/: dataset_meta.json
data/prompts/v1.0.1/: dataset_meta.json  prompts.jsonl
locks/: README.md
requirements/: torch-cpu.txt  torch-cuda118.txt  torch-cuda121.txt  torch-mps.txt
requirements/lock/: requirements.in
runs/final_20260112_084335/: README.md
runs/final_20260112_084335/audits/v1/: audit_interface.html  labels_filled.csv  labels_filled.json  sample.csv
runs/final_20260112_084335/audits/v1/analysis_calibrated/: audit_metrics.json
runs/final_20260112_084335/audits/v1/analysis_calibration/: README.md  audit_metrics.json
runs/final_20260112_084335/audits/v1/analysis_uncalibrated/: audit_metrics.json
runs/final_20260112_084335/data/prompts/v1.0.0/: prompts.jsonl  sha256.txt
runs/final_20260112_084335/data/prompts/v1.0.1/: dataset_meta.json  sha256.txt
runs/final_20260112_084335/env/: git_commit.txt  nvidia_smi.txt  pip_freeze.txt  requirements-linux-cuda121.txt
runs/final_20260112_084335/reports/v1_calibrated_20260116_113552/: index.html  report_config_effective.yaml  report_meta.json
runs/final_20260112_084335/reports/v1_calibrated_20260116_113552/tables/: by_relation.csv  counterfactual.csv  main_results.csv  prompt_metrics.csv
runs/final_20260112_084335/reports/v1_finalfix_20260114_143137/: index.html  report_config.yaml  report_config_effective.yaml  report_meta.json
runs/final_20260112_084335/reports/v1_finalfix_20260114_143137/tables/: by_relation.csv  counterfactual.csv  main_results.csv  prompt_metrics.csv
runs/final_20260112_084335/sd14_gligen/: gen_config.yaml  manifest.jsonl
runs/final_20260112_084335/sd14_gligen/eval/: metrics.json  per_sample.jsonl  provenance.json
runs/final_20260112_084335/sd14_gligen/eval_precal_20260116_113552/: checker_config.yaml  metrics.json  per_sample.jsonl
runs/final_20260112_084335/sd15_boxdiff/: manifest.jsonl
runs/final_20260112_084335/sd15_boxdiff/eval/: checker_config.yaml  metrics.json  per_sample.jsonl  provenance.json
runs/final_20260112_084335/sd15_boxdiff/eval_precal_20260116_113552/: metrics.json  per_sample.jsonl
runs/final_20260112_084335/sd15_promptonly/: manifest.jsonl
runs/final_20260112_084335/sd15_promptonly/eval/: metrics.json  per_sample.jsonl  provenance.json
runs/final_20260112_084335/sd15_promptonly/eval_precal_20260116_113552/: metrics.json  per_sample.jsonl
scripts/: backfill_report_prompt_metrics.py  fetch_model_revisions.py  generate_coco_vocab.py  recompute_audit_metrics_from_eval_jsonl.py
src/spatialbench_uc/: __init__.py  build_prompts.py  evaluate.py  generate.py  report.py
src/spatialbench_uc/audit/: __init__.py  analyze.py  sample.py
src/spatialbench_uc/detectors/: __init__.py  base.py  fasterrcnn.py  grounding_dino.py  registry.py
src/spatialbench_uc/generators/: __init__.py  base.py  boxdiff_gen.py  control_image.py  diffusers_gen.py  gligen_gen.py  registry.py
src/spatialbench_uc/generators/pipelines/: __init__.py  pipeline_stable_diffusion_boxdiff.py
src/spatialbench_uc/templates/: .gitkeep
src/spatialbench_uc/utils/: __init__.py  device.py
